    * New model for the white twintails.
    * Added the "Miku's Hair Tie" item.
    * Change the effects config option to be disabled by default.

v1.0.1:
    * Added the "Tail Blue's Hair Tie" item.
    * Added the "Tail Yellow's Hair Tie" item.

v1.0.0:
    * Initial version.