@@ -1,14 +1,16 @@
 package com.hea3ven.twintails.client.model;
 
 import org.lwjgl.opengl.GL11;
-
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.model.ModelBiped;
 import net.minecraft.entity.Entity;
 import net.minecraft.util.ResourceLocation;
+import cpw.mods.fml.relauncher.Side;
+import cpw.mods.fml.relauncher.SideOnly;
 import net.minecraftforge.client.model.AdvancedModelLoader;
 import net.minecraftforge.client.model.IModelCustom;
 
+@SideOnly(Side.CLIENT)
 public class ModelTwinTails extends ModelBiped {
 
     private IModelCustom model;
