@@ -1,6 +1,7 @@
     * New model for the white twintails.
     * Added the "Miku's Hair Tie" item.
     * Change the effects config option to be disabled by default.
+    * Fix an error when launching a server.
 
 v1.0.1:
     * Added the "Tail Blue's Hair Tie" item.
